--- a/conf/cw_agent_config.json
+++ b/conf/cw_agent_config.json
@@ -35,19 +35,20 @@
           "metric_declaration_dedup": true,
           "metric_namespace": "Neo4j",
           "metric_unit": {
-            "neo4j.neo4j.count.node": "Count"
+            "neo4j_database_neo4j_neo4j_count_node": "Count",
+            "neo4j_database_neo4j_neo4j_count_relationship": "Count"
           },
           "metric_declaration": [
             {
               "source_labels": ["job"],
               "label_matcher": "neo4j-prometheus",
-              "dimensions": [["node_count"]],
+              "dimensions": [["host"]],
               "metric_selectors": ["^neo4j_database_neo4j_neo4j_count_node$"]
             },
             {
               "source_labels": ["job"],
               "label_matcher": "neo4j-prometheus",
-              "dimensions": [["relationship_count"]],
+              "dimensions": [["host"]],
               "metric_selectors": [
                 "^neo4j_database_neo4j_neo4j_count_relationship$"
               ]
